# tantivy-android

./: .gitignore  README.md  build_android.sh  jitpack.yml  settings.gradle.kts
.github/workflows/: build.yml
rust/: Cargo.toml
rust/src/: index.rs  lib.rs  tokenizer.rs
tantivy-android/: build.gradle.kts
tantivy-android/src/androidTest/kotlin/com/noexcs/tantivy/: TantivyBM25Test.kt
tantivy-android/src/main/kotlin/com/noexcs/tantivy/: TantivyBM25.kt
